Werewolfdev's amazing Takeaways and Footer 🥵

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public",
+    "start": "sirv public -s",
+    "start:dev": "sirv public --dev -s",
     "validate": "svelte-check"
   },
   "devDependencies": {
